# Bay-Area-Ship-Detection-CNN

./: README.md  Ships.ipynb  pyproject.toml
.ipynb_checkpoints/: Ships-checkpoint.ipynb  pyproject-checkpoint.toml
